--- a/index.html
+++ b/index.html
@@ -1,63 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+ <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programmer</title>
     <link rel="stylesheet" href="index.css">
-</head>
+ </head>
 <body>
     <header>
         <div class="container">
             <p class="logo">ScheduleNOW!</p>
             <nav>
-                <a href="#Somos-ProNow">About us</a>
-                <a href="#Our-programs">Our programs</a>
-                <a href="#features">Our features</a>
-             </nav>
+              <a href="#final">Home</a>
+              <a href="#Somos-ProNow">About Us</a>
+              <a href="#Our-programs">Our Programs</a>
+              <a href="#features">Features</a>
+            </nav>
         </div>
     </header>
 
     <section id="hero">
         <h1>Learn to program<br>wiht the best</h1>
-        <form action="https://www.youtube.com/c/freeCodeCampEspa%C3%B1ol" target="_blank" rel="noopener noferrer">
+      <form action="https://www.youtube.com/c/freeCodeCampEspa%C3%B1ol" target="_blank" rel="noopener noferrer">
         <button>LEARN NOW!</button>
-        </form>
+      </form>
     </section>
-
+   
     <section id="Somos-ProNow">
      <div class="container">
-
-     <div class="img-container"></div>
         <h2>We are <span class="color-acento">already program!</span></h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure nulla molestias officia earum quos ullam est laborum dolore obcaecati, aperiam nobis, nemo et praesentium asperiores, odit distinctio suscipit iusto recusandae!</p>
-    </div>
+     </div>
+        <img id="img-container"src="https://i.blogs.es/a2066e/programando/1366_2000.jpg" >
     </section> 
 
     <section id="Our-programs">
-        <div class="container">
+
+     <div class="container">
             <h2>Our Programs</h2>
+            
         <div class="programs">
            <div class="programs">
+
          <div class="letter">
             <h3>Progammer front-end</h3>
             <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla placeat iure incidunt. Illum ratione amet et id enim nisi repellat officia, ipsam repellendus inventore ullam debitis saepe iure exercitationem iusto?</P>
             <button>+Info</button> 
         </div>
+
         <div class="letter">
             <h3>Programmer Backend</h3>
             <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla placeat iure incidunt. Illum ratione amet et id enim nisi repellat officia, ipsam repellendus inventore ullam debitis saepe iure exercitationem iusto?</P>
             <button>+Info</button> 
         </div>
-        <div class="letter">
+
+         <div class="letter">
             <h3>Python Progammer</h3>
             <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla placeat iure incidunt. Illum ratione amet et id enim nisi repellat officia, ipsam repellendus inventore ullam debitis saepe iure exercitationem iusto?</P>
             <button>+Info</button> 
          </div>
-       </div> 
+
+       </div>
+
      </div>
-    </section> 
+
+   </section> 
+
     <section id="features">
         <div class="container">
         <ul>
@@ -76,7 +85,7 @@
      </form>
     </section>
 
-    <footer>
+    <footer id="final">
         <div class="container">
             <p>&copy;RafaProgramNow 2022</p>
         </footer>   
