--- a/index.html
+++ b/index.html
@@ -29,20 +29,17 @@
    
     <section id="Somos-ProNow">
      <div class="container">
+      <div class="img-container"> <img src="https://i.blogs.es/a2066e/programando/1366_2000.jpg"></div>
+       <div class="texto">
         <h2>We are <span class="color-acento">already program!</span></h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure nulla molestias officia earum quos ullam est laborum dolore obcaecati, aperiam nobis, nemo et praesentium asperiores, odit distinctio suscipit iusto recusandae!</p>
-     </div>
-        <img id="img-container"src="https://i.blogs.es/a2066e/programando/1366_2000.jpg" >
+      </div>
     </section> 
 
     <section id="Our-programs">
-
-     <div class="container">
-            <h2>Our Programs</h2>
-            
+      <div class="container">
+           <h2>Our Programs</h2>
         <div class="programs">
-           <div class="programs">
-
          <div class="letter">
             <h3>Progammer front-end</h3>
             <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla placeat iure incidunt. Illum ratione amet et id enim nisi repellat officia, ipsam repellendus inventore ullam debitis saepe iure exercitationem iusto?</P>
@@ -59,13 +56,10 @@
             <h3>Python Progammer</h3>
             <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla placeat iure incidunt. Illum ratione amet et id enim nisi repellat officia, ipsam repellendus inventore ullam debitis saepe iure exercitationem iusto?</P>
             <button>+Info</button> 
-         </div>
-
-       </div>
-
-     </div>
-
-   </section> 
+          </div>
+        </div>
+      </div>
+    </section> 
 
     <section id="features">
         <div class="container">
@@ -85,10 +79,13 @@
      </form>
     </section>
 
-    <footer id="final">
+    <footer>
+      <section id="final">
         <div class="container">
             <p>&copy;RafaProgramNow 2022</p>
-        </footer>   
-    </div>  
- </body>
+        </div> 
+      </section> 
+    </footer> 
+
+  </body>
 </html>
