--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    
     <section id="Somos-ProNow">
      <div class="container">
-      <div class="img-container"> <img src="https://i.blogs.es/a2066e/programando/1366_2000.jpg"></div>
+      <div class="img-container"></div>
        <div class="texto">
         <h2>We are <span class="color-acento">already program!</span></h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure nulla molestias officia earum quos ullam est laborum dolore obcaecati, aperiam nobis, nemo et praesentium asperiores, odit distinctio suscipit iusto recusandae!</p>
